// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for <Icon /> Test the accessibilty of <Icon /> should match SnapShot 1`] = `
<i
  aria-label="Test Title This is a test description"
  className="md-icon icon icon-accessibility_16"
  style={
    Object {
      "fontSize": 16,
    }
  }
  title="Test Title"
/>
`;

exports[`Tests for <Icon /> Test the colors of <Icon /> should match SnapShot 1`] = `
<i
  aria-label={null}
  className="md-icon icon icon-accessibility_16"
  style={
    Object {
      "fontSize": 16,
    }
  }
/>
`;

exports[`Tests for <Icon /> Test the sizes of <Icon /> should match SnapShot 1`] = `
<i
  aria-label={null}
  className="md-icon icon icon-accessibility_16 testClass"
  style={
    Object {
      "color": "rgba(247, 100, 74, 1)",
      "fontSize": 24,
    }
  }
/>
`;

exports[`Tests for <Icon /> should match SnapShot 1`] = `
<i
  aria-label={null}
  className="md-icon icon icon-accessibility_16 testClass"
  style={
    Object {
      "color": "rgba(0, 160, 209, 1)",
      "fontSize": 16,
    }
  }
/>
`;
